@@ -1,4 +1,5 @@
 package com.Minor.OptimalGo.graph;
+
 import java.util.Comparator;
 import java.util.PriorityQueue;
 import com.Minor.OptimalGo.header.ArrayList;
@@ -6,33 +7,39 @@ import com.Minor.OptimalGo.header.RadixHeap;
 import com.Minor.OptimalGo.header.RadixHeap.Node;
 
 public class Dijkstra {
-    // Method to find the shortest path using PriorityQueue (duration or price)
+
+    // Method to find the shortest path using PriorityQueue (by duration or price)
     public ArrayList<String> calculateWithPriorityQueue(Graph graph, String startCity, String endCity, boolean byDuration) {
         return calculateRoute(graph, startCity, endCity, byDuration, false);
     }
-    // Method to find the shortest path using RadixHeap (duration or price)
+
+    // Method to find the shortest path using RadixHeap (by duration or price)
     public ArrayList<String> calculateWithRadixHeap(Graph graph, String startCity, String endCity, boolean byDuration) {
         return calculateRoute(graph, startCity, endCity, byDuration, true);
     }
 
     // Unified method to calculate the route
     private ArrayList<String> calculateRoute(Graph graph, String startCity, String endCity, boolean byDuration, boolean useRadixHeap) {
+
         int source = graph.getCityIndex(startCity);
         int destination = graph.getCityIndex(endCity);
-        //edge case
+
         if (source == -1 || destination == -1) {
             System.out.println("City not found!");
             return new ArrayList<>();
         }
+
         int numberOfCities = graph.getCitySize();
         int[] costs = new int[numberOfCities];
         int[] preVisitedNode = new int[numberOfCities];
         boolean[] visited = new boolean[numberOfCities];
+
         for (int i = 0; i < numberOfCities; i++) {
             costs[i] = Integer.MAX_VALUE;
             preVisitedNode[i] = -1;
         }
         costs[source] = 0;
+
         // Use appropriate heap based on the parameter
         if (useRadixHeap) {
             RadixHeap heap = new RadixHeap(numberOfCities);
@@ -43,7 +50,6 @@ public class Dijkstra {
                 int cityIndex = current.cityIndex;
 
                 if (visited[cityIndex]) continue;
-
                 visited[cityIndex] = true;
 
                 for (Edge edge : graph.getEdges(cityIndex)) {
@@ -62,7 +68,6 @@ public class Dijkstra {
                 }
             }
         } else {
-            // PriorityQueue to select the minimum cost path
             PriorityQueue<Pairs> pq = new PriorityQueue<>(Comparator.comparingInt(a -> byDuration ? a.duration : a.price));
             pq.add(new Pairs(source, 0, 0));
 
@@ -71,7 +76,6 @@ public class Dijkstra {
                 int cityIndex = current.cityIndex;
 
                 if (visited[cityIndex]) continue;
-
                 visited[cityIndex] = true;
 
                 for (Edge edge : graph.getEdges(cityIndex)) {
@@ -94,43 +98,55 @@ public class Dijkstra {
         return buildRoute(graph, startCity, endCity, costs, preVisitedNode, byDuration);
     }
 
-    // Helper method to build the route and print it in a formatted way
+    // Helper method to build and display the route summary
     private ArrayList<String> buildRoute(Graph graph, String startCity, String endCity, int[] costs, int[] preVisitedNode, boolean byDuration) {
         ArrayList<String> route = new ArrayList<>();
         ArrayList<Integer> stepCosts = new ArrayList<>();
         ArrayList<String> transportTypes = new ArrayList<>();
+        ArrayList<String> attractions = new ArrayList<>(); // To hold the attractions at each step
+
         int destination = graph.getCityIndex(endCity);
-        System.out.println("Building route from " + startCity + " to " + endCity + ", destination index: " + destination);
+        System.out.println("Building route from " + startCity + " to " + endCity);
+
+        // Variable to hold the attractions for the destination city
+        String destinationAttractions = "No attractions found";
+
+        // Start building the route from the destination to the source
         for (int currentLocation = destination; currentLocation != -1; currentLocation = preVisitedNode[currentLocation]) {
             if (currentLocation < 0 || currentLocation >= costs.length) {
                 System.out.println("Error: currentLocation index out of bounds: " + currentLocation);
                 break;
             }
-            route.addFirst(graph.getCityName(currentLocation));
+            route.add(0, graph.getCityName(currentLocation)); // Add city at the start
+
+            // Add the edge information (transport type, cost, and attractions) between consecutive cities
             if (preVisitedNode[currentLocation] != -1) {
                 int prevCityIndex = preVisitedNode[currentLocation];
-                if (prevCityIndex < 0 || prevCityIndex >= costs.length) {
-                    System.out.println("Error: prevCityIndex index out of bounds: " + prevCityIndex);
-                    break;
-                }
-                // Get the edge between the current and previous city to retrieve transport type and cost
                 Edge edge = graph.getEdge(prevCityIndex, currentLocation);
                 if (edge != null) {
                     int stepCost = costs[currentLocation] - costs[prevCityIndex];
-                    stepCosts.addFirst(stepCost);
-                    transportTypes.addFirst(edge.transportType.name());
+                    stepCosts.add(0, stepCost); // Add step cost at the start
+                    transportTypes.add(0, edge.transportType.name()); // Add transport type at the start
+
+                    // If we are at the destination city, store its attractions
+                    if (currentLocation == destination && edge.attraction != null && edge.attraction.length > 0) {
+                        destinationAttractions = String.join(", ", edge.attraction); // Store the attractions for the destination
+                    }
                 }
             }
         }
 
-        // Check if the destination was reachable
-        if (route.size() == 1 && !route.getFirst().equals(startCity)) {
+        // If only the start city is in the route, it means destination is unreachable
+        if (route.size() == 1 && !route.get(0).equals(startCity)) {
             System.out.println(endCity + " not reachable from " + startCity);
             return new ArrayList<>();
         }
+
+        // Print the route summary
         System.out.println("\n🌍  ----- Route Summary -----  🌍");
         System.out.println("🚩 " + (byDuration ? "Fastest" : "Cheapest") + " route from " + startCity + " to " + endCity + ":\n");
 
+        // Print each leg of the route with attractions, transport types, and costs/durations
         for (int i = 0; i < route.size(); i++) {
             if (i < route.size() - 1) {
                 System.out.println("🛣️  " + route.get(i) + " ➡️  " + route.get(i + 1) + " (" +
@@ -140,12 +156,15 @@ public class Dijkstra {
             }
         }
 
-        // Total cost or duration
         System.out.println("===================================");
+
+        // Print only the attractions for the destination city
         System.out.println("🕒 Total " + (byDuration ? "Duration: " + costs[destination] + " minutes" : "Price: " + costs[destination] + " ₹"));
+        System.out.println("🌟 Attractions : " + destinationAttractions); // Only print the attractions for the destination city
         System.out.println("🎉 Destination reached successfully! 🎉");
         System.out.println("===================================\n");
 
         return route;
     }
+
 }
